--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,3 +1,16 @@
 {
-    "русский": "ru"
+    "главная": "Главная",
+    "о нас": "О нас",
+    "блоги": "Блоги",
+    "контакт": "Контакт",
+    "корзина": "Корзина",
+    "доставка": "Доставка",
+    "магазин": "Магазин",
+    "войти": "Войти",
+    "авторизация": "Авторизация",
+    "регистрация": "Регистрация",
+    "светлая": "светлая",
+    "подписаться": "Подписаться",
+    "поиск": "Поиск",
+    "имэйл": "Ваш имэйл адресс"
 }
