--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,5 +12,8 @@
     "светлая": "светлая",
     "подписаться": "Подписаться",
     "поиск": "Поиск",
-    "имэйл": "Ваш имэйл адресс"
+    "имэйл": "Ваш имэйл адресс",
+    "Минимум 5 символов": "Минимум 5 символов",
+    "Неверный пароль или логин": "Неверный пароль или логин",
+    "Форма авторизации": "Форма авторизации"
 }
