I completed the user authorization, made a registration form but did not connect it with redax. I made a new theme for the button. Changed the button to call the modal. Displayed the authorized user in the Navbar

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,5 +16,8 @@
     "имэйл": "Your email address here",
     "Минимум 5 символов": "Minimum 5 characters",
     "Неверный пароль или логин": "Incorrect password or login",
-    "Форма авторизации": "Authorization form"
+    "Форма авторизации": "Authorization form",
+    "Авторизоваться": "Login",
+    "Зарегистрироваться": "Register",
+    "Форма регистрации": "Registration form"
 }
