--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -15,5 +15,8 @@
     "имэйл": "Ваш имэйл адресс",
     "Минимум 5 символов": "Минимум 5 символов",
     "Неверный пароль или логин": "Неверный пароль или логин",
-    "Форма авторизации": "Форма авторизации"
+    "Форма авторизации": "Форма авторизации",
+    "Авторизоваться": "Авторизоваться",
+    "Зарегистрироваться": "Зарегистрироваться",
+    "Форма регистрации": "Форма регистрации"
 }
